# C-Machine-Learning

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  configure
data/: sin.csv
examples/: CMakeLists.txt  err_test.c  pytest.py  sin-gen.c  sin_test.c  xor_test.c
examples/data/: sin.csv  xor.csv
libs/: CMakeLists.txt
libs/mpool/: CMakeLists.txt  mpool.h
libs/munit/: CMakeLists.txt
src/: .test.c.swp  CMakeLists.txt  builder.c  builder.h  errors.txt  matrix-builder.c  matrix-builder.h  matrix.c  matrix.h  net.c  net.h  test.c
src/api/: CMakeLists.txt  py-cnn.c
src/api/python/: CMakeLists.txt  py-cml.c
src/core/: CMakeLists.txt  activation.c  activation.h  builder.c  builder.h  cml-internal.h  cml.h  cost.c  csv-utils.c  csv-utils.h  data-builder.c  data-builder.h  err.c  err.h  matrix.c  matrix.h  net-builder.c  net-internal.h  net.c  net.h
src/test/: CMakeLists.txt  data-builder_test.c  data.csv  matrix_test.c  net-builder_test.c  pytest.py  sin-gen.c  sin_test.c  test.c  xor_test.c
src/tests/: sin_test.c  xor_test.c
tests/: .xor_test.c.swp  sin-gen.c  sin.csv  sin_test.c  xor_test.c
